force-app/main/default/objects/cpm__Matching_Object_Setting__c/cpm__Matching_Object_Setting__c.object-meta.xml
<CustomObject>
    <label>Matching Object Setting</label>
    <nameField>
        <displayFormat>MOS-{0}</displayFormat>
        <label>Matching Object Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matching Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>