force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__AccountId_field__c.field-meta.xml
<CustomField>
    <fullName>cpm__AccountId_field__c</fullName>
    <label>AccountId field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>