force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__AutomatchResult_Field__c.field-meta.xml
<CustomField>
    <fullName>cpm__AutomatchResult_Field__c</fullName>
    <label>AutomatchResult Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>