force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__ContactId_field__c.field-meta.xml
<CustomField>
    <fullName>cpm__ContactId_field__c</fullName>
    <label>ContactId field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>