force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__Find_in_Object__c.field-meta.xml
<CustomField>
    <fullName>cpm__Find_in_Object__c</fullName>
    <inlineHelpText>In what object are we searching for the value of the selected transaction field</inlineHelpText>
    <label>Find in Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>