force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__RelatedId_field__c.field-meta.xml
<CustomField>
    <fullName>cpm__RelatedId_field__c</fullName>
    <inlineHelpText>When selecting result type &quot;Related&quot; please fill in the lookup id field to the object you want to display.&lt;br&gt; 
Example: Searching on IBAN in &quot;Payment Profiles&quot; to show contacts of the found payment profiles fill in contact__c</inlineHelpText>
    <label>RelatedId field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>