force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__ResultType__c.field-meta.xml
<CustomField>
    <fullName>cpm__ResultType__c</fullName>
    <label>ResultType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>