force-app/main/default/objects/cpm__Matching_Object_Setting__c/fields/cpm__Transaction_Field__c.field-meta.xml
<CustomField>
    <fullName>cpm__Transaction_Field__c</fullName>
    <label>Transaction Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>